# bitcast

./: Cargo.toml
benches/: file_reader_bench.rs
src/: context.rs  design.md  errors.rs  hint.rs  lib.rs  merge.rs  reader.rs  storage.rs  writer.rs
src/fs_reader/: mmap.rs  mod.rs  pread.rs  seek.rs
src/fs_writer/: mod.rs  mutex.rs
src/keydir/: mod.rs  standard.rs
