[package]
authors = ["Yao Noel Achi <achi.noel@hotmail.com>"]
categories = ["data-structures", "filesystem"]
name = "ybitcast"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0"
memmap2 = "0"
crc-fast = "1"

[dev-dependencies]
criterion = { version = "0", features = ["html_reports"] }
tempfile = "3.20.0"

[[bench]]
name = "file_reader_bench"
harness = false

